src/components/projects/projects.scss
  $sub-color: rgb(214, 214, 214);

.projects-comp {
  background: #55756B;
  margin: 0;
  padding: 50px 0px;
  .projects-header-box {
    text-align: center;
    h1 {
      padding: 10px;
      color: rgb(255, 255, 255);
    }
  }
  .project-btns {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    padding: 20px;
    .project-btn {
      text-transform: uppercase;
      cursor: pointer;
      position: relative;
      background: none;
      background: rgb(115, 146, 136);
      color: rgb(255, 255, 255);
      padding: 10px 15px;
      margin: 5px 10px;
      border: none;
      outline: none;
      font-size: .7em;

      -o-transition:.3s;
      -webkit-transition:.3s;
      -webkit-transition: all ease-out .3s;
      -o-transition: all ease-out .3s;
      transition: all ease-out .3s;
      
    }
    button:hover{
      color: #434A62;
    }
    button:focus {
      color: #434A62;
    }
    button::after {
      content: '';
      position: absolute;
      background: #434A62;
      height: 2px;
      bottom: 0px; 
      left: 0px;
      width: 0%;
  
      -o-transition:.3s;
      -webkit-transition:.3s;
      -webkit-transition: all ease-out .3s;
      -o-transition: all ease-out .3s;
      transition: all ease-out .3s;
    }
    button:hover::after{
      content: '';
      width: 100%;
      height: 2px;
    }
    
  }

  .project-content-container {

    .project-content {
      margin: 0px 40px;
      position: relative;
      display: flex;
      justify-content: center;
      align-items: center;
      .img-links {
        
        .image-box {
          width: 40vw;
          img {
            width: 100%;
            height: 100%;
          }
        }
        .project-links {
          display: flex;
          justify-content: center;
          width: 100%;
          height: 100%;
          a {
            background: rgb(115, 146, 136);
            text-transform: uppercase;
            position: relative;
            text-decoration: none;
            color: white;
            padding: 10px 15px;
            // width: 150px;
            margin: 10px 20px;
            font-size: .9em;
          }
          a:hover{
            color: #434A62;
          }
          a::after {
            content: '';
            position: absolute;
            background: #434A62;
            height: 2px;
            bottom: 0px; 
            left: 0px;
            width: 0%;
        
            -o-transition:.3s;
            -webkit-transition:.3s;
            -webkit-transition: all ease-out .3s;
            -o-transition: all ease-out .3s;
            transition: all ease-out .3s;
          }
          a:hover::after {
            content: '';
            width: 100%;
            height: 2px;
          }
        }
      }
      .project-html-box {
        color: rgb(255, 255, 255);
        .projects {
          padding-left: 40px;
          display: grid;
          grid-template-columns: 1fr 1fr;
          .project-header {
            grid-column: span 2;
            padding-bottom: 15px;
            h1 {
              text-transform: uppercase;
              font-size: 1.2em;
              line-height: .9;
              font-size: 1.1em;
            }
            p {
              color: $sub-color;
              font-size: .9em;
            }
          }
          .list-section {
            grid-column: span 1;
            .tech-head,
            .feature-head {
              text-transform: uppercase;
              line-height: .9;
              font-size: .9em;
            }
            .tech {
              li {
                list-style: none;
                // list-style: inside;
                line-height: 1.3;
                font-size: .9em;
                color: $sub-color;

              }
            }
            .features {
              li {
                list-style: none;
                // list-style: inside;
                line-height: 1.3;
                font-size: .9em;
                color: $sub-color;
              }
            }
          }
          .par-section {
            grid-column: span 2;
            padding-top: 15px;
            h2 {
              text-transform: uppercase;
              line-height: .9;
              font-size: .9em;
            }
            p {
              line-height: 1.4;
              font-size: .9em;
              color: $sub-color;
            }
          }
        }
      }
    }
  }  
}
@media (max-width:800px){
  .projects-comp {
    .project-content-container {
      .project-content {
        flex-direction: column;
        .img-links {
          .image-box {
            width: 60vw;
          }
        }
        .project-html-box {
          .projects {
            padding-left: 0px;
          }
        }
      }
    }
  }
}


@media (max-width:900px){
  .projects-comp {
    .project-content-container {
      .project-content {
        .image-box {
          width: 100%;
        }
      }
    }
  }
}

